--- a/pom.xml
+++ b/pom.xml
@@ -138,6 +138,18 @@
             <artifactId>mybatis</artifactId>
             <version>3.3.0</version>
         </dependency>
+
+        <dependency>
+            <groupId>commons-dbcp</groupId>
+            <artifactId>commons-dbcp</artifactId>
+            <version>1.4</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.mybatis</groupId>
+            <artifactId>mybatis-spring</artifactId>
+            <version>1.2.3</version>
+        </dependency>
         <!--mybatis end-->
     </dependencies>
 
