--- a/pom.xml
+++ b/pom.xml
@@ -47,6 +47,13 @@
             <artifactId>junit</artifactId>
             <version>4.12</version>
         </dependency>
+
+        <dependency>
+            <groupId>jstl</groupId>
+            <artifactId>jstl</artifactId>
+            <!--<scope>provided</scope>-->
+            <version>1.2</version>
+        </dependency>
         <!--common end-->
 
         <!--spring start-->
@@ -118,6 +125,7 @@
             <artifactId>spring-webmvc</artifactId>
             <version>${spring.version}</version>
         </dependency>
+
         <!--springmvc end-->
 
         <!--mybatis start-->
@@ -152,7 +160,6 @@
         </dependency>
         <!--mybatis end-->
     </dependencies>
-
 
     <properties>
         <spring.version>4.2.0.RELEASE</spring.version>
