--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -7,7 +7,7 @@
     <!-- 加载spring容器 -->
     <context-param>
         <param-name>contextConfigLocation</param-name>
-        <param-value>classpath:applicationContext.xml</param-value>
+        <param-value>classpath:root-context.xml</param-value>
     </context-param>
     <listener>
         <listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
@@ -20,15 +20,15 @@
         <servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
         <!--contextConfigLocation配置springmvc加载的配置文件(配置处理映射器,适配器等等),
         如果不配置contextConfigLocation,默认加载的是/WEB-INF/servlet_name-servlet.xml(springmvc-servlet.xml-->
-        <!-- <init-param>
+        <init-param>
              <param-name>contextConfigLocation</param-name>
-             <param-value>classpath:springmvc.xml</param-value>
-         </init-param>-->
+             <param-value>WEB-INF/springmvc-servlet.xml</param-value>
+         </init-param>
     </servlet>
 
     <servlet-mapping>
         <servlet-name>springmvc</servlet-name>
-        <url-pattern>/*</url-pattern>
+        <url-pattern>*.html</url-pattern>
     </servlet-mapping>
     <!--servlet end-->
 
@@ -51,9 +51,14 @@
         <url-pattern>/*</url-pattern>
     </filter-mapping>
     <!--filter end-->
-    
-    
+
+
     <welcome-file-list>
+        <welcome-file>index.html</welcome-file>
+        <welcome-file>index.htm</welcome-file>
         <welcome-file>index.jsp</welcome-file>
+        <welcome-file>default.html</welcome-file>
+        <welcome-file>default.htm</welcome-file>
+        <welcome-file>default.jsp</welcome-file>
     </welcome-file-list>
 </web-app>
